--- a/package.json
+++ b/package.json
@@ -7,6 +7,6 @@
   },
   "dependencies": {
     "mustache": "2.2.1",
-    "parse-dashboard": "git+https://drchris@sent.com:chester1@github.com/drchris1502/parse-dashboard.git#master"
+    "parse-dashboard": "git+https://drchris1502:chester1@github.com/drchris1502/parse-dashboard.git#master"
   }
 }
